--- a/src/main/resources/ilinkAssersionPros/ilinkUIdata.properties
+++ b/src/main/resources/ilinkAssersionPros/ilinkUIdata.properties
@@ -1,5 +1,9 @@
 # 此文件为UI检查内容文件
 after_login_assert= 消息
+
 after_schedule_create = 自动化创建日程测试
+
 after_audio_create = 测试账号16发起的语音会议
+leave_audio_meeting_to_homepage =与测试账号16的音频会议，点击加入
+close_audio_meeting = 消息
 after_video_create = 测试账号16发起的视频会议
